--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,60 +8,72 @@
     android:background="@color/grey"
     tools:context=".SplashActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Todas receitas"
-        android:textSize="30dp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/gilroy_bold"
-        android:padding="10dp"/>
-
-    <androidx.cardview.widget.CardView
-        android:layout_marginTop="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/yellow"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp">
-
-        <SearchView
-            android:id="@+id/search_view"
-            android:theme="@style/ThemeOverlay.Search"
-            android:queryHint="Buscar por receitas"
+        android:scrollbars="none">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:iconifiedByDefault="false"
-            android:background="@drawable/search_bg"/>
-    </androidx.cardview.widget.CardView>
+            android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_main_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:itemCount="1"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        tools:listitem="@layout/item_rv_main_category"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Todas receitas"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/gilroy_bold"
+                android:padding="10dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nome da categoria"
-        android:textSize="30dp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/gilroy_bold"
-        android:padding="10dp"/>
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/yellow"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_sub_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:itemCount="1"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        tools:listitem="@layout/item_rv_main_category"/>
+                <SearchView
+                    android:id="@+id/search_view"
+                    android:theme="@style/ThemeOverlay.Search"
+                    android:queryHint="Buscar por receitas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:iconifiedByDefault="false"
+                    android:background="@drawable/search_bg"/>
+            </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_main_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:itemCount="1"
+                android:layout_margin="15dp"
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_rv_main_category"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nome da categoria"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/gilroy_bold"
+                android:padding="10dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_sub_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:itemCount="1"
+                android:layout_margin="15dp"
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_rv_sub_category"/>
+        </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
